<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen     xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/preferences">
    <CheckBoxPreference
        android:key="@string/pref_id_use_app_keyboard"
        android:title="@string/pref_use_app_keyboard"
        android:defaultValue="true" />
    <!--<CheckBoxPreference
        android:key="@string/pref_id_enable_vibration_feedback"
        android:title="@string/pref_enable_vibration_feedback" />-->

    <CheckBoxPreference
        android:key="@string/pref_id_show_help_text"
        android:title="@string/pref_help_text"
        android:summary="@string/pref_summary_help_text"
        android:defaultValue="true" />

    <ListPreference
        android:key="@string/pref_id_color_theme"
        android:title="@string/pref_color_theme"
        android:entries="@array/pref_color_themes"
        android:entryValues="@array/pref_color_themes_values"
        android:defaultValue="@string/pref_color_blue" />
</PreferenceScreen>