<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.app.numconv.CalculatorActionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/add"
            android:background="@drawable/button_background"
            android:textColor="?attr/panelTextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textOn="@string/add_button_text" android:textOff="@string/add_button_text" />

        <ToggleButton
            android:id="@+id/subtract"
            android:background="@drawable/button_background"
            android:textColor="?attr/panelTextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textOn="@string/subtract_button_text" android:textOff="@string/subtract_button_text" />

        <ToggleButton
            android:id="@+id/multiply"
            android:background="@drawable/button_background"
            android:textColor="?attr/panelTextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textOn="@string/multiply_button_text" android:textOff="@string/multiply_button_text" />

        <ToggleButton
            android:id="@+id/divide"
            android:background="@drawable/button_background"
            android:textColor="?attr/panelTextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textOn="@string/divide_button_text" android:textOff="@string/divide_button_text" />

    </LinearLayout>
</FrameLayout>
